# libactpol_deps

./: README  patch_slim_v2_7_1_uint8fix.diff  sofa
sla_refro-moby2-1/: Makefile  slarefro.h
sla_refro-moby2-1/.libs/: libslaf.la
slim_v2_7_1/: 00_next.txt  AUTHORS  README
slim_v2_7_1-moby1/: INSTALL  Makefile  Makefile.in  TODO  VERSIONS  archive_exclude.txt  make_archive.sh
slim_v2_7_1-moby1/doc/: magic
slim_v2_7_1-moby1/examples/ljhslim/: ljhslim_control.cpp
slim_v2_7_1-moby1/src/: .Makefile.depend  bit_constants.h  build_bit_constants_h  build_bit_constants_h.cpp  slim.cpp  slim_channel.cpp  slim_codec_reduced_binary.cpp  slim_dump.cpp  slimlib.cpp  test_building_blocks.cpp
slim_v2_7_1-moby1/test/: .Makefile.depend  generate_random_data.c  profile.sh  test_bitstream.h  test_zirfile
slim_v2_7_1-moby1/ups/: Makefile  slim.table
slim_v2_7_1-moby2-1/: Makefile  config.status  configure  configure.ac
slim_v2_7_1-moby2-1/doc/: slim_format.tex
slim_v2_7_1-moby2-1/include/: slimlib.h
slim_v2_7_1-moby2-1/src/: Makefile  Makefile.in  bit_constants.cpp  build_bit_constants_h  build_bit_constants_h.cpp  slim_codec_constant.cpp  test_slimlibC.c
slim_v2_7_1-moby2-1/test/: Makefile  regression.py  verify_test_bitstream  verify_test_bitstream.cpp
slim_v2_7_1/doc/: Makefile  slim.doc
slim_v2_7_1/examples/: README
slim_v2_7_1/examples/ljhslim/: Makefile  README  ljhslim  ljhslim.cpp  ljhslim.h
slim_v2_7_1/include/: slim.h  version.h
slim_v2_7_1/share/: Makefile
slim_v2_7_1/share/man/man1/: slim.1  unslim.1
slim_v2_7_1/src/: Makefile  bit_constants.cpp  bitstream.cpp  bitstream.h  crc.h  raw_section.cpp  slim_codec_default.cpp  slim_codec_factory.cpp  slim_codec_reduced_binary.cpp  slim_codec_runlength.cpp  slim_control.cpp  slim_exceptions.cpp  slim_file.cpp  slim_single_codec.h  test_bitstream.cpp
slim_v2_7_1/test/: Makefile  Makefile.in  compute_entropy.cpp  generate_random_data  make_test_bitstream  make_test_bitstream.cpp  run_profile.py  test_bitstream  test_bitstream.cpp  test_slim.py  test_slimdopen  test_slimdopen.c  test_zirfile.cpp
sofa_20180130/: Makefile
